--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="../javascript/main.js"></script>
+    <script src="javascript/main.js"></script>
     <title>Kang Bin Kim</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
     </div>
     <div class="container">
         <div class="leftDiv">
-            <img src="../src/images/homePhotoOfMyself.jpeg" height="100%" width="100%"/>
+            <img src="src/images/homePhotoOfMyself.jpeg" height="100%" width="100%"/>
         </div>
         <div class="rightDiv">
             <p>
@@ -43,10 +43,10 @@
     </div>
     <div class="container">
         <div class = "leftFFFF00">
-            <img src="../src/images/FFFF00Login.png" height="100%" width="100%"/>
+            <img src="src/images/FFFF00Login.png" height="100%" width="100%"/>
         </div>
         <div class="rightFFFF00">
-            <img src="../src/images/FFFF00Home.png" height="100%" width="100%"/>
+            <img src="src/images/FFFF00Home.png" height="100%" width="100%"/>
         </div>
         <div class="bottomFFFF00">
             <p>
