--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="../javascript/main.js"></script>
+    <script src="javascript/main.js"></script>
     <title>Kang Bin Kim</title>
 </head>
 <body>
@@ -61,7 +61,7 @@
     </div>
     <div class="contactRight">
         <h2>E-mail</h2>
-        <form method="post" name="email" action="../form-to-email.php">
+        <form method="post" name="email" action="form-to-email.php">
             <p>
                 Enter Name: <input type="text" name="name">
             </p>
