--- a/sampleworks.html
+++ b/sampleworks.html
@@ -2,9 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sample Works</title>
+    <link rel="stylesheet" href="css/main.css">
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="javascript/main.js"></script>
+    <title>Kang Bin Kim</title>
 </head>
 <body>
 
+<div>
+    <ul class="topnav" id="myTopnav">
+        <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
+        <li><a href="about.html"><i class="fa fa-user-circle"></i> About</a></li>
+        <li><a href="contact.html"><i class="fa fa-envelope-o"></i>Contact</a></li>
+        <li><a href="resume.html"><i class="fa fa-file-pdf-o"></i> Resume</a></li>
+        <li><a href="sampleworks.html"><i class="fa fa-file-code-o" aria-hidden="true"></i> Projects</a></li>
+        <li class="icon">
+            <a href="javascript:void(0);" onclick="navClick()">&#9776;</a>
+        </li>
+    </ul>
+</div>
+<div>
+    <h1 class = "name">
+        Project: Real time Chess web app using Node.js
+    </h1>
+</div>
+<div class="container">
+    <div class = "leftProject">
+        <img src="src/images/chessBlack.png" height="100%" width="100%"/>
+    </div>
+    <div class="rightProject">
+        <img src="src/images/chessWhite.png" height="100%" width="100%"/>
+    </div>
+</div>
+<div>
+    <p class="name">
+        Used Node.js to set up the server, built a basic chess game using npm libraries, and used  socket.io to communicate
+    </p>
+    <p class="name">
+        as fast as possible between machines over the internet so that the changes made on one machine are reflected instantly on the other.
+    </p>
+</div>
 </body>
 </html>
