--- a/about.html
+++ b/about.html
@@ -44,11 +44,11 @@
         </p>
     </div>
 </div>
-<div>
-    <h1 class="name">
-        Music
-    </h1>
-</div>
+<!--<div>-->
+    <!--<h1 class="name">-->
+        <!--Music-->
+    <!--</h1>-->
+<!--</div>-->
 
 </body>
 </html>
