--- a/resume.html
+++ b/resume.html
@@ -2,9 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Resume</title>
+    <link rel="stylesheet" href="css/main.css">
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="javascript/main.js"></script>
+    <title>Kang Bin Kim</title>
 </head>
 <body>
+
+<div>
+    <ul class="topnav" id="myTopnav">
+        <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
+        <li><a href="about.html"><i class="fa fa-user-circle"></i> About</a></li>
+        <li><a href="contact.html"><i class="fa fa-envelope-o"></i>Contact</a></li>
+        <li><a href="resume.html"><i class="fa fa-file-pdf-o"></i> Resume</a></li>
+        <li><a href="sampleworks.html"><i class="fa fa-file-code-o" aria-hidden="true"></i> Projects</a></li>
+        <li class="icon">
+            <a href="javascript:void(0);" onclick="navClick()">&#9776;</a>
+        </li>
+    </ul>
+</div>
+<div>
+    <h1 class = "name">
+        Resume
+    </h1>
+</div>
+<div>
+    <embed src="src/Kang%20Bin%20Kim%20Resume.pdf" width="100%" height="600" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+</div>
 
 </body>
 </html>
