finished personal website

--- a/about.html
+++ b/about.html
@@ -28,27 +28,26 @@
 </div>
 <div class="aboutContainer">
     <div class="aboutLeft">
+        <p> ABOUT MYSELF </p>
+        <br>
         <ul class>
-            <li>Name: Kang Bin Kim</li>
+            <li>Name: Jeff Kang Bin Kim</li>
             <li>Education: Georgia Institute of Technology</li>
-            <li>Graduation Date: May 2018</li>
+            <li>Graduation Date: December 2018</li>
             <li>Interests: Rapping, Longboarding, Soccer</li>
-            <li>Skills: Java, C, Matlab, Node.js, HTML, CSS, Github, 3D Inventor</li>
-            <li>Leadership: Republic of Korea Air Force, GT Korean Soccer Captain</li>
+            <li>Software Skills: Java, C, TypeScript, JavaScript, Github, Linux/Unix</li>
+            <li>Leadership Experience: Republic of Korea Air Force,</li>
             <li>Projects: See 'Projects' at the navigation bar</li>
         </ul>
     </div>
     <div class="aboutRight">
+        <p> FUTURE GOALS </p>
+        <br>
         <p>
-            I am planning to intern at Coca Cola's Salesforce Team this summer and work as a backend developer after graduation. After gaining a good foundation, In 5 years, I will be working at a startup company as a full stack developer or as a security specialist.
+            I am planning work as a backend developer after graduation. After gaining a good foundation, In 5 years, I will be working at a startup company as a full stack developer.
         </p>
     </div>
 </div>
-<!--<div>-->
-    <!--<h1 class="name">-->
-        <!--Music-->
-    <!--</h1>-->
-<!--</div>-->
 
 </body>
 </html>
