--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/main.css">
-    <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="javascript/main.js"></script>
     <title>Kang Bin Kim</title>
@@ -29,8 +28,8 @@
 </div>
 <div class="contactContainer">
     <div class="contactLeft">
-        <ul class>
-            <li><a class="hoverLink" href="https://www.linkedin.com/in/kang-bin-kim-820516ba/">LinkedIn Profile</a></li>
+        <ul>
+            <li><a class="hoverLink" href="https://www.linkedin.com/in/kang-bin-kim">LinkedIn Profile</a></li>
             <li class="contactSpace"><a class="hoverLink" href="https://github.com/kimkb2011">Github Profile</a></li>
             <li class="contactSpace">
                 <form method="post" name="email" action="mailto:kimkb2011@gmail.com">
