--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="javascript/main.js"></script>
-    <title>Kang Bin Kim</title>
+    <title>Jeff Kang Bin Kim</title>
 </head>
 <body>
     <div>
@@ -28,11 +28,11 @@
     </div>
     <div class="container">
         <div class="leftDiv">
-            <img src="src/images/homePhotoOfMyself.jpeg" height="100%" width="100%"/>
+            <img src="src/images/homePhotoOfMyself.jpeg" height="80%" width="100%"/>
         </div>
         <div class="rightDiv">
             <p>
-                Hi, I am a third year Computer Science student at Georgia Tech looking for a full-time opportunity in backend development and cloud computing for Fall 2018.  My concentration in computer science is specifically System/Architecture and Info-Internetworks because I am extremely interested in backend development, cloud computing, and cyber security.  To add, I am currently working on a project with a friend to learn Node.js and to ultimately create a web application that allows users to rate and review different music festivals.  I am excited about creating a scalable web application and working on the server side to improve efficiency.  I am a problem solver and would like to be involved in designing a new approach to scale effectively.   In my internship this summer I will work on test coverages, database optimization, and write test scripts for test automation using Javascript, Apex, and Aura.  This will give me the opportunity to apply my knowledge and get hands on experience as a developer. I have a 3.7 GPA, a strong programming background, and an enthusiasm for backend development.
+                Hi, I am a fourth year Computer Science student at Georgia Tech looking for an internship opportunity focused in backend development for Summer 2018.  My concentration in computer science is specifically System/Architecture and Info-Internetworks because I am extremely interested in web development.  To add, I am currently working on a project with a friend to learn MEAN Stack and to ultimately create a web application that allows diligent workers to connect with stores that need their skillset.  I am excited about creating a scalable web application and working on the server side to improve efficiency.  I am a problem solver and would like to be involved in designing a new approach to scale effectively.   In my internship last summer I have worked on test coverages and web development using the Lightning Component Framework. I have a 3.75 GPA, a strong programming background, and an enthusiasm for backend development.
             </p>
         </div>
     </div>
